Adding stuff I don't remember in order to share with Jeff

--- a/app/views/todos/index.html.erb
+++ b/app/views/todos/index.html.erb
@@ -1,35 +1,22 @@
-<h1>Listing todos</h1>
-
-<table>
-  <tr>
-    <th>Parent</th>
-    <th>Position</th>
-    <th>Description</th>
-    <th>Due date</th>
-    <th>Scheduled at</th>
-    <th>Urgent</th>
-    <th>Notes</th>
-    <th></th>
-    <th></th>
-    <th></th>
-  </tr>
-
-<% @todos.each do |todo| %>
-  <tr>
-    <td><%= todo.parent_id %></td>
-    <td><%= todo.position %></td>
-    <td><%= todo.description %></td>
-    <td><%= todo.due_date %></td>
-    <td><%= todo.scheduled_at %></td>
-    <td><%= todo.urgent %></td>
-    <td><%= todo.notes %></td>
-    <td><%= link_to 'Show', todo %></td>
-    <td><%= link_to 'Edit', edit_todo_path(todo) %></td>
-    <td><%= link_to 'Destroy', todo, method: :delete, data: { confirm: 'Are you sure?' } %></td>
-  </tr>
+<%= form_for Todo.new do |f| %>
+  <%= f.text_field :description, class: "span6" %>
 <% end %>
-</table>
-
-<br />
-
-<%= link_to 'New Todo', new_todo_path %>
+<div style="overflow-x: scroll">
+  <table>
+    <tr>
+      <% @projects.each do |project| %>
+      <td id="project_<%= project.id %>">
+        <h2><%= project.description %></h2>
+        <div id="parent_<%= project.id %>">
+          <ul class="unstyled" id="parent_<%= project.id %>_children">
+            <% project.children.each do |child| %>
+              <%= render 'todo', todo: child %>
+            <% end %>
+            <%= render 'form_ajax', todo: Todo.new(parent_id: project.id) %>
+          </ul>
+        </div>
+      </td>
+      <% end %>
+    </tr>
+  </table>
+</div>
